[tool.poetry]
name = "opensearch-sdk-py"
version = "0.1.0"
description = "OpenSearch Python SDK."
authors = ["Daniel Doubrovkine <dblock@dblock.org>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "*"
pytest = "*"
isort = "*"
flake8 = "*"
black = "*"
autoflake = "*"
protobuf = "^3"
2to3 = "*"

[tool.isort]
profile = "black"
known_first_party = "poetry"
skip = ["protobuf"]

[tool.black]
exclude = ["protobuf"]

[tool.autoflake]
recursive = true
in-place = true
remove-unused-variables = true
remove-all-unused-imports = true
exclude = ["protobuf"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
log_cli = true
log_cli_level = "DEBUG"