[tool.poetry]
name = "opensearch-sdk-py"
version = "0.1.0"
description = "OpenSearch Python SDK."
authors = ["Daniel Doubrovkine <dblock@dblock.org>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "*"
pytest = "*"
isort = "*"
flake8 = "^6.0.0"
black = "*"
autoflake = "*"
protobuf = "^3"
types-protobuf = "*"
2to3 = "*"
sortedcollections = "*"
mypy = "*"
licenseheaders = "*"

[tool.isort]
profile = "black"
known_first_party = "poetry"
skip = ["protobuf"]
line_length = 240

[tool.black]
line-length = 240
target-version = ['py37']
extend-exclude = "protobuf"

[tool.autoflake]
exclude = ["protobuf"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
log_cli = true
log_cli_level = "DEBUG"

[tool.mypy]
python_version = 3.9
disallow_untyped_defs = true
warn_return_any = true
exclude = ['src/opensearch_sdk_py/protobuf']
ignore_missing_imports = true